--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -287,7 +287,7 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   # Silence warnings about __int64 alignment hack not always being applicable
   target_compile_options(devilutionx PRIVATE -Wno-ignored-attributes)
   # Fix: error: cast from pointer to smaller type 'unsigned char' loses information
-  target_compile_options(devilution PRIVATE -fms-extensions -fms-compatibility -fms-compatibility-version=19.00)
+  target_compile_options(devilution PRIVATE -D__GNUC__ -fms-extensions -fms-compatibility -fms-compatibility-version=19.00)
 	# Silence appfat.cpp warnings
-  set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wno-narrowing")
+	set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wno-narrowing")
 endif()
